[package]
name = "piper"
version = "0.1.0"
authors = ["Ted Naleid <contact@naleid.com>"]
edition = "2018"
description = "A fast command-line utility to make lots of dynamic http requests based on stdin input"
readme = "README.md"
keywords = ["curl", "http", "request"]
categories = ["command-line-utilities"]
repository = "https://github.com/tednaleid/piper"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33.3"
crossbeam = "0.7.3"
crossterm = "0.17.7"
anyhow = "1.0"

futures = "0.3.5"
tokio = { version = "0.2.*", features = ["full"] }
reqwest = { version = "0.10.*", features = ["gzip", "native-tls"] }

lazy_static = "1.4.0"
smallvec = "1.4.2"
regex = "1.3.9"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
tempfile = "3"

# [profile.release]
# lto = true

[workspace]
members = ["echoserver"]
