[package]
name = "piper"
version = "0.1.0"
authors = ["Ted Naleid <contact@naleid.com>"]
edition = "2018"
description = "A fast command-line utility to make lots of dynamic http requests based on stdin input"
readme = "README.md"
keywords = ["curl", "http", "request"]
categories = ["command-line-utilities"]
repository = "https://github.com/tednaleid/piper"
license = "MIT OR Apache-2.0"

[dependencies]
#clap = "2.33.3"
clap = "3.0.0-beta.2"
crossbeam = "0.8.0"
crossterm = "0.18.2"
anyhow = "1.0"

futures = "0.3.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.3" # required for now as it isn't in tokio https://docs.rs/tokio/1.2.0/tokio/stream/index.html
reqwest = { version = "0.11", features = ["json", "gzip", "native-tls"] }

lazy_static = "1.4.0"
smallvec = "1.5.1"
regex = "1.4.2"

nom = "6.1.0"
funty = "=1.1.0"  # hard-coding because of https://github.com/bitvecto-rs/bitvec/issues/105

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1"
tempfile = "3"

# [profile.release]
# lto = true

[workspace]
members = ["echoserver"]
